--- a/src/styles.scss
+++ b/src/styles.scss
@@ -63,6 +63,7 @@ body {
   }
 
   #mainSection {
+    width: 100%;
     .signin {
       background-image: url('/img/hero.jpg');
       background-size: cover;
@@ -70,6 +71,9 @@ body {
       min-width: 100%;
       h1 {
         color: $color-green-light;
+      }
+      .usa-form {
+        max-width: 500px !important;
       }
       .usa-label {
         color: $color-green-light;
@@ -103,8 +107,6 @@ body {
       }
     }
     .grid-container {
-      max-width: unset;
-      width: 90%;
       .grid-col-2 {
         flex: 1;
       }
@@ -362,19 +364,6 @@ body {
     display: flex;
   }
 
-  // .chat-content-question {
-  //   background-color: #381f59;
-  //   border-top-right-radius: 10px;
-  //   color: #ffffff;
-  //   border-radius: 4px;
-  //   padding: 1rem;
-  //   margin: 2rem 0;
-  //   align-self: flex-end;
-  //   border-top-left-radius: 20px;
-  //   border-top-right-radius: 20px;
-  //   border-bottom-right-radius: 20px;
-  // }
-
   .chat-content-question {
     background-color: $color-white;
     border: 1px solid $color-gray;
@@ -487,16 +476,16 @@ table.data-table tbody td {
 }
 
 table.data-table tbody tr:hover {
-  background-color: $color-green-light;
+  background-color: $color-primary-gray;
 }
 
 .sidebar {
-  width: 250px;
+  width: 60px;
   height: 100%;
-  position: fixed;
+  position: relative;
   display: block;
   top: 0;
-  left: -190px;
+  left: 0;
   background-color: $color-primary;
   transition: left 0.3s ease;
   z-index: 10001;
@@ -505,6 +494,11 @@ table.data-table tbody tr:hover {
     position: relative;
     left: 10px;
     bottom: 10px;
+    font-size: 14px;
+  }
+
+  .sidebar-text:hover {
+    text-decoration: underline;
   }
 
   button {
@@ -530,6 +524,7 @@ table.data-table tbody tr:hover {
 
 .sidebar.open {
   left: 0;
+  width: 250px;
 }
 
 @media (min-width: 80em) {
