Add logo to landing page. Update sidebar spacing. Update dummy user name.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -520,7 +520,7 @@ table.data-table tbody tr:hover {
     color: $color-white;
     position: relative;
     top: 3px;
-    left: 9px;
+    left: 7px;
   }
 
   .sidebar-profile-name {
@@ -532,8 +532,12 @@ table.data-table tbody tr:hover {
     font-weight: 400;
   }
 
+  .sidebar-btn-group {
+    padding: 12px 0;
+  }
+
   button {
-    margin: 16px 16px 12px 16px;
+    margin: 8px 16px 8px 16px;
   }
 
   ul {
