CSG-1312: Accessibility changes for sidebar buttons and colors.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -95,7 +95,7 @@ body {
       font-size: 1rem;
       font-weight: 400;
       line-height: 1.2;
-      color: #71767a;
+      color: #4c4f52;
     }
 
     #faqs {
