--- a/src/styles.scss
+++ b/src/styles.scss
@@ -582,17 +582,16 @@ table.data-table tbody tr:hover {
   .filters-text:hover {
     text-decoration: underline;
   }
-
-  button {
-    margin: 8px 16px 8px 16px;
-  }
 }
 
 .filters-btn-container {
-  position: fixed;
-  right: 120px;
-  bottom: 85px;
+  position: relative;
   z-index: 10001;
+}
+
+#clear-filters-btn {
+  background-color: #dee1e5;
+  border: 2px solid #dee1e5;
 }
 
 #filters-btn {
