--- a/src/styles.scss
+++ b/src/styles.scss
@@ -114,7 +114,7 @@ body {
 
     .usa__logo-mark {
       height: 40px;
-      background: #381f59;
+      background: transparent;
       border-radius: 20px;
     }
   }
