UI Updates to address:
Update the welcome message with the following:
Change Main Header to: MetroStar Navigator
Change the sub-text to: Let's Answer Your PTO, Leave, and Benefits Questions
Add disclaimer below the search: Navigator can make mistakes, validate important information
Update the search bar placeholder?
"Type your question here"

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -65,7 +65,7 @@ body {
   #mainSection {
     width: 100%;
     .signin {
-      background-image: url('/img/hero.jpg');
+      background-image: url('/img/space.jpg');
       background-size: cover;
       height: 100vh;
       min-width: 100%;
@@ -234,7 +234,9 @@ body {
       outline: none;
     }
   }
-
+  .disclaimer {
+    text-align: center;
+  }
   .text-area-label {
     display: none;
   }
